{
  "a11y": {
    "user_menu": "User menu"
  },
  "action": {
    "close": "Close",
    "copy_link": "Copy link",
    "edit": "Edit",
    "go": "Go",
    "invite": "Invite",
    "no": "No",
    "register": "Register",
    "remove": "Remove",
    "sign_in": "Sign in",
    "sign_out": "Sign out",
    "submit": "Submit",
    "upload_file": "Upload file"
  },
  "analytics_notice": "By participating in this beta, you consent to the collection of anonymous data, which we use to improve the product. You can find more information about which data we track in our <2>Privacy Policy</2> and our <6>Cookie Policy</6>.",
  "app_selection_modal": {
    "continue_in_browser": "Continue in browser",
    "open_in_app": "Open in the app",
    "text": "Ready to join?",
    "title": "Select app"
  },
  "application_opened_another_tab": "This application has been opened in another tab.",
  "browser_media_e2ee_unsupported": "Your web browser does not support media end-to-end encryption. Supported Browsers are Chrome, Safari, Firefox >=117",
  "browser_media_e2ee_unsupported_heading": "Incompatible Browser",
  "call_ended_view": {
    "body": "You were disconnected from the call",
    "create_account_button": "Create account",
    "create_account_prompt": "<0>Why not finish by setting up a password to keep your account?</0><1>You'll be able to keep your name and set an avatar for use on future calls</1>",
    "feedback_done": "<0>Thanks for your feedback!</0>",
    "feedback_prompt": "<0>We'd love to hear your feedback so we can improve your experience.</0>",
    "headline": "{{displayName}}, your call has ended.",
    "not_now_button": "Not now, return to home screen",
    "reconnect_button": "Reconnect",
    "survey_prompt": "How did it go?"
  },
  "call_name": "Name of call",
  "common": {
    "analytics": "Analytics",
    "audio": "Audio",
    "avatar": "Avatar",
    "back": "Back",
    "camera": "Camera",
    "display_name": "Display name",
    "encrypted": "Encrypted",
    "error": "Error",
    "home": "Home",
    "loading": "Loading…",
    "microphone": "Microphone",
    "next": "Next",
    "options": "Options",
    "password": "Password",
    "profile": "Profile",
    "settings": "Settings",
    "unencrypted": "Not encrypted",
    "username": "Username",
    "video": "Video"
  },
  "crypto_version": "Crypto version: {{version}}",
  "device_id": "Device ID: {{id}}",
  "disconnected_banner": "Connectivity to the server has been lost.",
  "full_screen_view_description": "<0>Submitting debug logs will help us track down the problem.</0>",
  "full_screen_view_h1": "<0>Oops, something's gone wrong.</0>",
  "group_call_loader": {
    "banned_body": "You have been banned from the room.",
    "banned_heading": "Banned",
    "call_ended_body": "You have been removed from the call.",
    "call_ended_heading": "Call ended",
    "failed_heading": "Failed to join",
    "failed_text": "Call not found or is not accessible.",
    "knock_reject_body": "The room members declined your request to join.",
    "knock_reject_heading": "Not allowed to join",
    "reason": "Reason"
  },
  "hangup_button_label": "End call",
  "header_label": "Element Call Home",
  "header_participants_label": "Participants",
  "invite_modal": {
    "link_copied_toast": "Link copied to clipboard",
    "title": "Invite to this call"
  },
  "join_existing_call_modal": {
    "join_button": "Yes, join call",
    "text": "This call already exists, would you like to join?",
    "title": "Join existing call?"
  },
  "layout_grid_label": "Grid",
  "layout_spotlight_label": "Spotlight",
  "lobby": {
    "ask_to_join": "Ask to join call",
    "join_button": "Join call",
    "leave_button": "Back to recents",
    "waiting_for_invite": "Request sent"
  },
  "log_in": "Log In",
  "logging_in": "Logging in…",
  "login_auth_links": "<0>Create an account</0> Or <2>Access as a guest</2>",
  "login_auth_links_prompt": "Not registered yet?",
  "login_subheading": "To continue to Element",
  "login_title": "Login",
  "matrix_id": "Matrix ID: {{id}}",
  "microphone_off": "Microphone off",
  "microphone_on": "Microphone on",
  "mute_microphone_button_label": "Mute microphone",
  "participant_count_one": "{{count, number}}",
  "participant_count_other": "{{count, number}}",
  "qr_code": "QR Code",
  "rageshake_button_error_caption": "Retry sending logs",
  "rageshake_request_modal": {
    "body": "Another user on this call is having an issue. In order to better diagnose these issues we'd like to collect a debug log.",
    "title": "Debug log request"
  },
  "rageshake_send_logs": "Send debug logs",
  "rageshake_sending": "Sending…",
  "rageshake_sending_logs": "Sending debug logs…",
  "rageshake_sent": "Thanks!",
  "recaptcha_caption": "This site is protected by ReCAPTCHA and the Google <2>Privacy Policy</2> and <6>Terms of Service</6> apply.<9></9>By clicking \"Register\", you agree to our <12>End User Licensing Agreement (EULA)</12>",
  "recaptcha_dismissed": "Recaptcha dismissed",
  "recaptcha_not_loaded": "Recaptcha not loaded",
  "register": {
    "passwords_must_match": "Passwords must match",
    "registering": "Registering…"
  },
  "register_auth_links": "<0>Already have an account?</0><1><0>Log in</0> Or <2>Access as a guest</2></1>",
  "register_confirm_password_label": "Confirm password",
  "register_heading": "Create your account",
  "return_home_button": "Return to home screen",
  "room_auth_view_eula_caption": "By clicking \"Join call now\", you agree to our <2>End User Licensing Agreement (EULA)</2>",
  "room_auth_view_join_button": "Join call now",
  "screenshare_button_label": "Share screen",
  "settings": {
    "developer_settings_label": "Developer Settings",
    "developer_settings_label_description": "Expose developer settings in the settings window.",
    "developer_tab_title": "Developer",
    "duplicate_tiles_label": "Number of additional tile copies per participant",
    "feedback_tab_body": "If you are experiencing issues or simply would like to provide some feedback, please send us a short description below.",
    "feedback_tab_description_label": "Your feedback",
    "feedback_tab_h4": "Submit feedback",
    "feedback_tab_send_logs_label": "Include debug logs",
    "feedback_tab_thank_you": "Thanks, we received your feedback!",
    "feedback_tab_title": "Feedback",
    "more_tab_title": "More",
    "opt_in_description": "<0></0><1></1>You may withdraw consent by unchecking this box. If you are currently in a call, this setting will take effect at the end of the call.",
    "speaker_device_selection_label": "Speaker"
  },
  "star_rating_input_label_one": "{{count}} stars",
  "star_rating_input_label_other": "{{count}} stars",
  "start_new_call": "Start new call",
  "start_video_button_label": "Start video",
  "stop_screenshare_button_label": "Sharing screen",
  "stop_video_button_label": "Stop video",
  "submitting": "Submitting…",
  "unauthenticated_view_body": "Not registered yet? <2>Create an account</2>",
  "unauthenticated_view_eula_caption": "By clicking \"Go\", you agree to our <2>End User Licensing Agreement (EULA)</2>",
  "unauthenticated_view_login_button": "Login to your account",
  "unmute_microphone_button_label": "Unmute microphone",
  "version": "{{productName}} version: {{version}}",
  "video_tile": {
    "always_show": "Always show",
    "change_fit_contain": "Fit to frame",
    "collapse": "Collapse",
    "expand": "Expand",
    "mute_for_me": "Mute for me",
    "volume": "Volume"
  }
}
